# Graphitti

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BGDriver.cpp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json.in  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Contributors.md  Dockerfile  Dockerfile.bak  IChainNode.cpp  Makefile  Project.cbp  QuestionsForStiber.md  README.md  SummerOfBrain  SummerOfBrain.cbp  cmake_install.cmake  config.h  config.h.in  resultsSerialSmallConnected.xml  serialSTDP.xml  tance().executeOperation(Operations::deallocateGPUMemory);  test-large-2-connected-out-cpu.xml  test-large-2ep-10sec-connected-out-cpu.xml  testResult.xml  testResultSTDPDeserialize.xml  testResultSmallCon.xml  testResultSmallConDeserialize.xml
Simulation/Core/: BGDriver-old.cpp  BGDriver.cpp  CMakeLists.txt  CPUSpikingModel.cpp  CPUSpikingModel.h  GPUSpikingModel.cu  GPUSpikingModel.h  Model.cpp  Model.h  OperationManager.cpp  OperationManager.h  Operations.h  Simulator.cpp  Simulator.h  SynapseIndexMap.h
Simulation/Core/FunctionNodes/: CMakeLists.txt  GenericFunctionNode.cpp  GenericFunctionNode.h  IFunctionNode.h
Simulation/Recorders/: CMakeLists.txt  Hdf5GrowthRecorder.cpp  Hdf5GrowthRecorder.h  Hdf5Recorder.cpp  Hdf5Recorder.h  IRecorder.h  RecorderFactory.cpp  RecorderFactory.h  XmlGrowthRecorder.cpp  XmlGrowthRecorder.h  XmlRecorder.cpp  XmlRecorder.h  XmlSTDPRecorder.cpp  XmlSTDPRecorder.h
Simulator/Connections/: CMakeLists.txt  ConnGrowth.cpp  ConnGrowth.h  ConnGrowth_d.cu  ConnStatic.cpp  ConnStatic.h  Connections.cpp  Connections.h  ConnectionsFactory.cpp  ConnectionsFactory.h
Simulator/Connections/NG911/: Connections911.cpp  Connections911.h
Simulator/Connections/Neuro/: ConnGrowth.cpp  ConnGrowth.h  ConnGrowth_d.cpp  ConnGrowth_d.cu  ConnStatic.cpp  ConnStatic.h
Simulator/Core/: BGDriver.cpp  CMakeLists.txt  CPUModel.cpp  CPUModel.h  CPUSpikingModel.cpp  CPUSpikingModel.h  Core.cpp  Core.h  Driver.cpp  Driver.h  EdgeIndexMap.h  GPUModel.cpp  GPUModel.cu  GPUModel.h  GPUSpikingModel.cu  GPUSpikingModel.h  Graphitti_Main.cpp  Model.cpp  Model.h  OperationManager.cpp  OperationManager.h  Operations.h  Serializer.cpp  Serializer.h  Simulator.cpp  Simulator.h  SynapseIndexMap.h
Simulator/Core/FunctionNodes/: GenericFunctionNode.cpp  GenericFunctionNode.h  IFunctionNode.h  TwoUint64ArgFunctionNode.cpp  TwoUint64ArgFunctionNode.h
Simulator/Edges/: AllDSSynapses_d.cu  AllDynamicSTDPSynapses.cpp  AllEdges.cpp  AllEdges.h  AllSTDPSynapses.cpp  AllSTDPSynapses.h  AllSynapses.cpp  AllSynapses.h  CMakeLists.txt  EdgesFactory.cpp  EdgesFactory.h  IAllEdges.h
Simulator/Edges/NG911/: All911Edges.cpp  All911Edges.h  All911Edges_d.cpp
Simulator/Edges/Neuro/: AllDSSynapses.cpp  AllDSSynapses.h  AllDSSynapses_d.cpp  AllDSSynapses_d.cu  AllDynamicSTDPSynapses.cpp  AllDynamicSTDPSynapses.h  AllDynamicSTDPSynapses_d.cpp  AllDynamicSTDPSynapses_d.cu  AllNeuroEdges.cpp  AllNeuroEdges.h  AllSTDPSynapses.cpp  AllSTDPSynapses.h  AllSTDPSynapses_d.cpp  AllSTDPSynapses_d.cu  AllSpikingSynapses.cpp  AllSpikingSynapses.h  AllSpikingSynapses_d.cpp  AllSpikingSynapses_d.cu  AllSynapses.cpp  AllSynapses.h  AllSynapsesDeviceFuncs.h  IAllSynapses.h  (+3 more)
Simulator/Layouts/: CMakeLists.txt  DynamicLayout.cpp  DynamicLayout.h  FixedLayout.cpp  FixedLayout.h  Layout.cpp  Layout.h  LayoutFactory.cpp  LayoutFactory.h
Simulator/Utils/: BGTypes.h  Book.h  CMakeLists.txt  CircularBuffer.h  Coordinate.h  CreateFunctionMap.cpp  DeviceVector.h  Event.h  Factory.cpp  Factory.h  Global.cpp  Global.h  GraphManager.cpp  GraphManager.h  InputEvent.h  InputManager.cpp  InputManager.h  NvtxHelper.cpp  NvtxHelper.h  ParameterManager.cpp  ParameterManager.h  ParseParamError.cpp  ParseParamError.h  Timer.cpp  Timer.h  Util.cpp  Util.h  VertexType.h
Simulator/Vertices/: AllIZHNeurons.h  AllIZHNeurons_d.cu  AllLIFNeurons.h  AllVertices.cpp  AllVertices.h  CMakeLists.txt  DoubleEventBuffer.cpp  DoubleEventBuffer.h  EventBuffer.cpp  EventBuffer.h  IAllVertices.h  VerticesFactory.cpp  VerticesFactory.h  VerticiesFactory.h
Testing/: CMakeLists.txt  README.md  RunTests.cpp  RunTests.sh
Testing/ArrayPerformance/: ArrayPerformance.md
Testing/ChainOfResponsibility/: ChainNodeTests.cpp  ChainObjectHandlerTests.cpp  ChainOperationManagerTests.cpp  FunctionNodeTests.cpp  OperationManagerTests.cpp
Testing/Core/: ConnectionsFactoryTests.cpp  DeserializationTests.cpp  EdgeIndexMapTests.cpp  EdgesFactoryTests.cpp  Foo.cpp  Foo.h  FunctionNodeTests.cpp  InputManagerTests.cpp  LayoutFactoryTests.cpp  OperationManagerTestingClass.h  OperationManagerTests.cpp  RNGFactoryTests.cpp  RecorderFactoryTests.cpp  SerializationFileAccessTest.cpp  SerializationTests.cpp  SimulatorTests.cpp  SynapseIndexMapTests.cpp  VerticesFactoryTests.cpp  XmlRecorderTests.cpp
Testing/RegressionTestComparison/: test-medium-out.xml
Testing/RegressionTesting/: compare_matrices.cpp
Testing/TestData/: NG_911_inputs.xml  neuro_inputs.xml
Testing/UnitTesting/: ConnectionsFactoryTests.cpp  DeserializationTests.cpp  DeviceVectorTests.cpp  EdgeIndexMapTests.cpp  EdgesFactoryTests.cpp  EventBufferTests.cpp  FunctionNodeTests.cpp  GraphManagerTests.cpp  Hdf5RecorderTests.cpp  InputManagerTests.cpp  LayoutFactoryTests.cpp  OperationManagerTestingClass.h  OperationManagerTests.cpp  RNGFactoryTests.cpp  RecorderFactoryTests.cpp  SerializationFileAccessTest.cpp  SerializationFirstHalfTest.cpp  SerializationFullTest.cpp  SerializationHelper.cpp  SerializationSecondHalfTest.cpp  SerializationTests.cpp  SimulatorTests.cpp  VerticesFactoryTests.cpp  XmlRecorderTests.cpp
Testing/Utils/: CircularBufferTests.cpp  ParamaterManagerTests.cpp  ParameterManagerTests.cpp
Testing/lib/: CMakeLists.txt
Utils/: CMakeLists.txt  Global.cpp  Global.h  ParameterManager.cpp  ParameterManager.h
Utils/Inputs/: SInputRegular.cpp
Utils/Matrix/: CompleteMatrix.cpp  CompleteMatrix.h  Matrix.cpp  Matrix.h  MatrixFactory.h  SparseMatrix.cpp  SparseMatrix.h  VectorMatrix.cpp  VectorMatrix.h
Utils/TinyXPath/: tinyxml.h
(+2796 files in other folders)
